Fix popular header color, adjust avatar spacing on mobile

--- a/assets/app/components/avatar_list.scss
+++ b/assets/app/components/avatar_list.scss
@@ -11,6 +11,7 @@
   }
 
   &-item {
+    flex: 0 1 180px;
     position: relative;
     width: 60px;
     margin: 5px 5px 23px;
