--- a/assets/app/components/header.scss
+++ b/assets/app/components/header.scss
@@ -1,18 +1,12 @@
 // Dark Headers
-.page-podcast-index,
-.page-podcast-show,
-.page-podcast-upcoming,
-.page-podcast-recommended,
-.page-podcast-show,
-.page-episode-show,
-.page-episode-preview,
+body[class*="podcast"],
+body[class*="episode"],
+body[class*="live"],
 .page-page-community,
 .page-page-sponsor,
 .page-topic-show,
 .page-news_source-show,
 .page-person-subscribe,
-.page-live-index,
-.page-live-show,
 .page-page-weekly,
 .page-page-nightly,
 .page-page-ten {
